--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "lint": "eslint --ext .js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "aes-js": "^3.1.0",
+    "ali-oss": "^4.11.0",
+    "co": "^4.6.0",
     "uuid": "^3.1.0"
   }
 }
