Pic\Block store

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http": "0.0.0",
     "mongoose": "^4.13.0",
     "nodemailer": "^4.3.1",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "wilddog": "^2.5.17"
   }
 }
