--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "co": "^4.6.0",
     "http": "0.0.0",
     "mongoose": "^4.13.0",
+    "node-schedule": "^1.2.5",
     "nodemailer": "^4.3.1",
     "uuid": "^3.1.0",
     "wilddog": "^2.5.17"
