--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^4.13.0",
     "node-schedule": "^1.2.5",
     "nodemailer": "^4.3.1",
+    "promise-polyfill": "^6.0.2",
     "uuid": "^3.1.0",
     "wilddog": "^2.5.17"
   }
