--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "aes-js": "^3.1.0",
     "ali-oss": "^4.11.0",
     "co": "^4.6.0",
+    "event": "^1.0.0",
     "http": "0.0.0",
     "mongoose": "^4.13.0",
     "node-schedule": "^1.2.5",
